fixed layout issues that appeared on deployment

--- a/src/App.scss
+++ b/src/App.scss
@@ -85,7 +85,7 @@ svg:hover {
 // }
 
 #portfolio-nav {
-  font-size: calc(16px + 2vh);
+  font-size: calc(16px + 1.5vw);
 }
 
 .git-button {
